--- a/package.json
+++ b/package.json
@@ -11,5 +11,15 @@
     "next": "9.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.1",
+    "@types/react": "^16.9.35",
+    "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
+    "bootstrap": "^4.5.0",
+    "node-sass": "^4.14.1",
+    "react-bootstrap": "^1.0.1",
+    "typescript": "^3.9.2"
   }
 }
