--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
   "devDependencies": {
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
+    "@types/react-redux": "^7.1.8",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "bootstrap": "^4.5.0",
+    "firebase": "^7.14.4",
     "node-sass": "^4.14.1",
     "react-bootstrap": "^1.0.1",
-    "typescript": "^3.9.2"
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "typescript": "^3.9.2",
+    "typescript-fsa": "^3.0.0",
+    "typescript-fsa-reducers": "^1.2.1"
   }
 }
