--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@zeit/next-typescript": "^1.1.1",
     "bootstrap": "^4.5.0",
     "firebase": "^7.14.4",
+    "history": "^4.10.1",
     "node-sass": "^4.14.1",
     "react-bootstrap": "^1.0.1",
     "react-redux": "^7.2.0",
