--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "history": "^4.10.1",
     "node-sass": "^4.14.1",
     "react-bootstrap": "^1.0.1",
+    "react-hook-form": "^5.7.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
