--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
     "next": "9.4.0",
@@ -16,12 +17,20 @@
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
     "@types/react-redux": "^7.1.8",
+    "@types/redux-logger": "^3.0.7",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "bootstrap": "^4.5.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
     "firebase": "^7.14.4",
     "history": "^4.10.1",
     "node-sass": "^4.14.1",
+    "prettier": "^2.0.5",
     "react-bootstrap": "^1.0.1",
     "react-hook-form": "^5.7.2",
     "react-redux": "^7.2.0",
