--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.10",
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
     "@types/react-redux": "^7.1.8",
     "@types/redux-logger": "^3.0.7",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
-    "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "bootstrap": "^4.5.0",
+    "classnames": "^2.2.6",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
@@ -37,6 +38,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.26.5",
     "typescript": "^3.9.2",
     "typescript-fsa": "^3.0.0",
     "typescript-fsa-reducers": "^1.2.1"
