--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react": "^7.20.0",
     "firebase": "^7.14.4",
     "history": "^4.10.1",
+    "nextjs-progressbar": "^0.0.5",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
     "react-bootstrap": "^1.0.1",
