--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "yarn run build && next export",
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
