--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sass": "^1.26.5",
     "typescript": "^3.9.2",
     "typescript-fsa": "^3.0.0",
-    "typescript-fsa-reducers": "^1.2.1"
+    "typescript-fsa-reducers": "^1.2.1",
+    "why-did-you-update": "0.1.1"
   }
 }
