--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@nandorojo/swr-firestore": "^0.7.4",
     "@types/classnames": "^2.2.10",
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
