--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "dependencies": {
     "next": "9.4.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
-  },
-  "devDependencies": {
+    "react-dom": "16.13.1",
     "@nandorojo/swr-firestore": "^0.7.4",
     "@types/classnames": "^2.2.10",
     "@types/node": "^14.0.1",
@@ -26,15 +24,10 @@
     "@zeit/next-typescript": "^1.1.1",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
-    "eslint": "^7.0.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
     "firebase": "^7.14.4",
     "history": "^4.10.1",
     "nextjs-progressbar": "^0.0.5",
     "node-sass": "^4.14.1",
-    "prettier": "^2.0.5",
     "react-bootstrap": "^1.0.1",
     "react-hook-form": "^5.7.2",
     "react-redux": "^7.2.0",
@@ -45,7 +38,14 @@
     "sass": "^1.26.5",
     "typescript": "^3.9.2",
     "typescript-fsa": "^3.0.0",
-    "typescript-fsa-reducers": "^1.2.1",
+    "typescript-fsa-reducers": "^1.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "prettier": "^2.0.5",
     "why-did-you-update": "0.1.1"
   }
 }
